# computer-graphics-kinematics

./: .gitignore  .gitmodules  CMakeLists.txt  README.html  README.md  README.tex.md  main.cpp
cmake/: FindLIBIGL.cmake
data/: beast.bf  beast.json  beast.ply  chimpanzee-hand.bf  chimpanzee-hand.json  chimpanzee-hand.ply  ikea-lamp.dmat  ikea-lamp.json  ikea-lamp.mat  ikea-lamp.ply  knight.bf  knight.dmat  knight.json  knight.ply  knight.tgf  robot-arm.bf  robot-arm.dmat  robot-arm.json  robot-arm.ply
include/: Bone.h  Skeleton.h  catmull_rom_interpolation.h  copy_skeleton_at.h  end_effectors_objective_and_gradient.h  euler_angles_to_quaternion.h  euler_angles_to_transform.h  forward_kinematics.h  inverse_kinematics.h  kinematics_jacobian.h  line_search.h  linear_blend_skinning.h  projected_gradient_descent.h  read_model_and_rig_from_json.h  skeleton_visualization_mesh.h  transformed_tips.h
scripts/: beast.m  bone_figures.m  canonical_bone.m  crab.m  hand.m  hotdog.m  keys.m  knight.m  lamp.m  repmesh2.m  rest_skeleton_mesh.m  robot_arm.m  skeleton_transformations.m  write_json.m
src/: catmull_rom_interpolation.cpp  copy_skeleton_at.cpp  end_effectors_objective_and_gradient.cpp  euler_angles_to_transform.cpp  forward_kinematics.cpp  kinematics_jacobian.cpp  line_search.cpp  linear_blend_skinning.cpp  projected_gradient_descent.cpp  transformed_tips.cpp
